# dispatch_agents_sdk

./: .gitignore  CONTRIBUTING.md  LICENSE-3rdparty.csv  README.md  RELEASE_NOTES.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/scripts/: change_scope.py  version_policy.py
.github/tests/: test_change_scope.py  test_ci_git.py  test_version_policy.py
.github/workflows/: ci-reusable.yml  feature-branch.yml  publish.yml  release.yml  version-policy-reusable.yml  workflow-changes.yml
agentservice/v1/: message_pb2.py  message_pb2.pyi  request_response_pb2.py  request_response_pb2.pyi  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
dispatch_agents/: __init__.py  agent_service.py  config.py  events.py  grpc_server.py  instrument.py  invocation.py  llm.py  llm_langchain.py  logging_config.py  mcp.py  memory.py  models.py  resources.py  version.py
dispatch_agents/contrib/: __init__.py
dispatch_agents/contrib/claude/: __init__.py
dispatch_agents/contrib/openai/: __init__.py
dispatch_agents/integrations/: __init__.py
dispatch_agents/integrations/github/: README.md  __init__.py  client.py
dispatch_agents/proxy/: __init__.py  server.py  sse_utils.py
examples/: README.md  pyproject.toml
examples/company-researcher/: .gitignore  README.md  agent.py  dispatch.yaml  pyproject.toml
examples/conversational-agent/: README.md  agent.py  dispatch.yaml  pyproject.toml
examples/daily-digest/: README.md  agent.py  dispatch.yaml  pyproject.toml
examples/datadog_mcp/: .dispatch.yaml  agent.py  pyproject.toml  test_claude_sdk.py
examples/dd_incident_multi_agent/: .dispatch.yaml  README.md  agent_main.py  dispatch_agent_wrapper.py  incident_types.py  investigation_graph.py  pyproject.toml
examples/dd_mcp_agent/: .dispatch.yaml  README.md  agent_main.py  pyproject.toml
examples/deep-research/: README.md  agent.py  configuration.py  deep_researcher.py  dispatch.yaml  prompts.py  pyproject.toml  state.py  tools.py
examples/github_pr_responder/: .dispatch.yaml  agent.py  pyproject.toml
examples/hello_world/: agent.py  dispatch.yaml  pyproject.toml  test_agent.py
examples/knowledge-base-query/: .env.example  agent.py  dispatch.yaml  pyproject.toml
examples/llm_gateway_tester/: .gitignore  agent.py  dispatch.yaml  pyproject.toml
examples/multi-framework/: README.md  agent.py  dispatch.yaml  pyproject.toml
examples/storage-tester/: .dispatch.yaml  agent.py  pyproject.toml
examples/trace-stress-test/: agent.py  dispatch.yaml  pyproject.toml
examples/weather-assistant/: .dispatch.yaml  AGENTS.md  agent.py  pyproject.toml
examples/weather-service/: .dispatch.yaml  agent.py  pyproject.toml
plugins/: README.md
plugins/dispatch-agents/: .mcp.json
plugins/dispatch-agents/.claude-plugin/: plugin.json
plugins/dispatch-agents/skills/getting-started/: SKILL.md
scripts/ci/: version_policy.py
tasks/: lessons.md  todo.md
tests/: e2e_claude_mcp_proxy.py  test.py  test_agent_service.py  test_agent_uid.py  test_config.py  test_contrib_claude.py  test_contrib_openai.py  test_dev_mode_isolation.py  test_extra_headers.py  test_fn_decorator.py  test_github_client.py  test_github_integration.py  test_github_schema_compliance.py  test_grpc_server.py  test_init.py  test_instrument.py  test_llm_langchain.py  test_llm_logging.py  test_logging_config.py  test_mcp.py  test_memory.py  test_proxy_e2e.py  test_proxy_server.py  test_resources.py  test_sse_utils.py  test_trace_context.py  test_typed_events.py  test_version_policy.py
tests/schemas/: README.md  octokit-webhooks.json
