[project]
name = "dd-logs-agentic-search"
version = "0.1.0"
description = ""
readme = ""
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "dispatch-agents",
    "fastapi>=0.119.0",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.5",
    "marimo>=0.14.17",
    "openai>=1.100.2",
]

[tool.isort]
profile = "black"

[tool.uv.sources]
dispatch-agents = { path = "../../sdk" }
