[project]
name = "multi-framework"
version = "0.1.0"
requires-python = "~=3.13.0"
dependencies = [
    "dispatch-agents",
    "claude-agent-sdk>=0.1.29",
    "openai-agents",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
]

[tool.uv.sources]
dispatch-agents = { path = "../../sdk" }
